# dns-resolver-rs

./: Cargo.toml  README.md
src/: cli.rs  error.rs  main.rs  types.rs
