[package]
name = "dns_resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
